--- a/login/homepage.html
+++ b/login/homepage.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <img src = logo.png id = 'mainlogo' >
+    <img src = "resources/images/loz.jpg" id = 'mainlogo' >
 
     <div id="usernamefield">
         <input type="text" name="username" placeholder="Username Here">
