--- a/forum browse/forum.html
+++ b/forum browse/forum.html
@@ -1,27 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-   <meta charset="utf-8">
-     <title>309</title>
-     <link rel="stylesheet" type="text/css" href="homepage.css">
-     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700" rel="stylesheet">
-     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-  </head>
+<head>
+	<meta charset="UTF-8">
+	<title>[SNES] Kirby Super Star - 2-Player Co-op</title>
+	<link rel="stylesheet" href="forum.css">
+</head>
+<body>
+	<nav id="topNav">
+		<h2 id="topNav_title"><a href="#">MeetNPlay</a></h2>
+		<ul id="topNav_links">
+			<li><a class="linkAnimate" href="#">Home</a></li>
+			<li><a class="linkAnimate" href="#">Browse</a></li>
+		</ul>
+	</nav>
+	<header>
+		<h1 id="headerTitle">FIND A GAME</h1>
+	</header>
+	<nav id="sideNav">
+		<div id="sideNavContents">
+			Nav
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</div>
+	</nav>
+	<nav id="thread">
+		<section id="post">
+			<img class="userProfilePic" src="kirby_prof.png" alt="userProfilePic1">
+			User1 - Post - [SNES] Kirby Super Star - 2-Player Co-op
+		</section>
+		<section class="comment">
+			User2 - Comment - [SNES] Kirby Super Star - 2-Player Co-op
+		</section>
+		<section class="comment">
+			User2 - Comment - [SNES] Kirby Super Star - 2-Player Co-op
+		</section>
+		<section class="comment">
+			User2 - Comment - [SNES] Kirby Super Star - 2-Player Co-op
+		</section>
+	</nav>
 
-  <body>
-    <img src = "../resources/images/loz.jpg" id = 'mainlogo' >
-
-    <div id="usernamefield">
-        <input type="text" name="username" placeholder="Username Here">
-    </div>
-
-    <div id="passwordfield">
-        <input type="password" name="password" placeholder="Password Here">
-    </div>
-
-  </body>
-
-
-
-
+	<!-- <div id="colours">
+		<div></div><div></div><div></div><div></div><div></div>
+	</div> -->
+</body>
 </html>
