made a login page more formal

--- a/login/homepage.html
+++ b/login/homepage.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
    <meta charset="utf-8">
-     <title>309</title>
+     <title>Meet'N'Play</title>
      <link rel="stylesheet" type="text/css" href="homepage.css">
      <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700" rel="stylesheet">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
@@ -11,20 +11,26 @@
   <body>
     <img src = "../resources/images/loz.jpg" id = 'mainlogo' >
 
-    <div id="usernamefield">
+    <div id="loginField">
+      <form id = 'loginForm'>
         <input type="text" name="username" placeholder="Username Here">
-    </div>
 
-    <div id="passwordfield">
         <input type="password" name="password" placeholder="Password Here">
-    </div>
 
+        <input type="submit" value="login">
+
+
+      </form>
+          </div>
+
+
+  <script type="text/javascript" src="homepage.js"></script>
   </body>
 
   <footer>
       Copyright (c) 2018 Copyright Holder All Rights Reserved.
 
-    
+
   </footer>
 
 
