--- a/forum/forum.html
+++ b/forum/forum.html
@@ -10,7 +10,7 @@
 		<h2 id="topNav_title"><a href="#">MeetNPlay</a></h2>
 		<ul id="topNav_links">
 			<li><a class="linkAnimate" href="#">Home</a></li>
-			<li><a class="linkAnimate" href="#">Browse</a></li>
+			<li><a class="linkAnimateCurrent" href="#">Browse</a></li>
 		</ul>
 	</nav>
 	<header>
