drop down menu, log in and forum updates

--- a/forum/loggedInForum.html
+++ b/forum/loggedInForum.html
@@ -28,7 +28,16 @@
 					<ul id="topNav_links">
 						<li><a class="linkAnimate" href="#">Home</a></li>
 						<li><a class="linkAnimate" href="#">Browse</a></li>
-						<li id="loginButtonContainer"><a id="loginButton" class="linkAnimate" href="../login/homepage.html">Login</a></li>
+						<li id="loginButtonContainer"><a id="loginButton" class="linkAnimate" href="#">
+							Name
+						</a>
+						<div class="dropdown-content">
+							<a href="#">Link 1</a>
+							<a href="#">Link 2</a>
+							<a href="#">Link 3</a>
+						</div>
+
+					</li>
 					</ul>
 				</nav>
 				<div id="headerTitleContainer">
