--- a/login/homepage.html
+++ b/login/homepage.html
@@ -8,8 +8,8 @@
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   </head>
 
-  <body>
-    <img src = "../resources/images/loz.jpg" id = 'mainlogo' >
+  <body  id = "headerBG">
+    <img src = "../resources/images/logo.png" id = 'mainlogo' >
 
     <div id="loginField">
       <form id = 'loginForm'>
