Added header styles to other forum pages

--- a/forum/forum.html
+++ b/forum/forum.html
@@ -19,7 +19,7 @@
 		<div id="headerContainer">
 			<div id="headerContainerPadding">
 				<nav id="topNav">
-					<h2 id="topNav_title"><a href="#">MeetNPlay</a></h2>
+					<a id ="topNav_title" href="#"><img id="topNav_titleImg" src="../resources/images/logo2.png" alt="logo"></a>
 					<div id="topNav_hamburger" class="hamburger">
 						<div class="bar"></div>
 						<div class="bar"></div>
@@ -34,6 +34,7 @@
 				<div id="headerTitleContainer">
 					<h1 id="headerTitle">FIND A GAME</h1>
 				</div>
+				<div id="loginButtonBG"></div>
 			</div>
 		</div>
 	</header>
