eddited side bar to function as originally planned

--- a/forum/forum.html
+++ b/forum/forum.html
@@ -49,13 +49,57 @@
 							<input type="submit" value="Find Game">
 					</form>
 				</li>
-				<li class ='sideNavList'><a class = 'sideNavGames' href = ''>
-					Filters
-				</a></li>
-				<li class ='sideNavList'><a class = 'sideNavGames' href = ''>
-					Sort
-				</a></li>
-				<li class ='sideNavList'><a class = 'sideNavGames' href = ''>Super Smash Brothers Brawl</a></li>
+				<li class ='sideNavList'>
+					<p>Filters</p>
+					<button class="accordion">Game Station</button>
+					<div class="panel">
+						<ul>
+							<li><button class = "accordionButton">XBox One</button></li>
+							<li><button class = "accordionButton">Xbox 360</button></li>
+							<li><button class = "accordionButton">other Xbox</button></li>
+							<li><button class = "accordionButton">PS3</button></li>
+							<li><button class = "accordionButton">PS4</button></li>
+							<li><button class = "accordionButton">PC</button></li>
+							<li><button class = "accordionButton">Wii</button></li>
+							<li><button class = "accordionButton">WiiU</button></li>
+							<li><button class = "accordionButton">Switch</button></li>
+						</ul>
+					</div>
+
+					<button class="accordion">Number of People</button>
+					<div class="panel">
+						<ul>
+							<li><button class = "accordionButton">2</button></li>
+							<li><button class = "accordionButton">3</button></li>
+							<li><button class = "accordionButton">4</button></li>
+							<li><button class = "accordionButton">5</button></li>
+							<li><button class = "accordionButton">6</button></li>
+							<li><button class = "accordionButton">7+</button></li>
+						</ul>
+					</div>
+
+					<button class="accordion">Genre</button>
+					<div class="panel">
+						<ul>
+							<li><button class = "accordionButton">MMRPG</button></li>
+							<li><button class = "accordionButton">FPS</button></li>
+							<li><button class = "accordionButton">Racing</button></li>
+							<li><button class = "accordionButton">Strategy</button></li>
+
+
+						</ul>
+					</div>
+				</li>
+				<li class ='sideNavList'>
+					<p>Sort</p>
+					<button class="accordion">Options</button>
+					<div class="panel">
+						<ul>
+							<li><button class = "accordionButton">by Date Posted</button></li>
+							<li><button class = "accordionButton">by Game Name</button></li>
+						</ul>
+					</div>
+				</li>
 			</ul>
 		</div>
 	</nav>
