--- a/forum/loggedInForum.html
+++ b/forum/loggedInForum.html
@@ -32,8 +32,8 @@
 							Name
 						</a>
 						<div class="dropdown-content">
-							<a href="#">Link 1</a>
-							<a href="#">Link 2</a>
+							<a href="#">Profile</a>
+							<a href="#">Make a Post</a>
 							<a href="#">Link 3</a>
 						</div>
 
