Finished most of frontend account stuff, just need to edit heeaders

--- a/Accounts/post_request_viewing_own.html
+++ b/Accounts/post_request_viewing_own.html
@@ -41,8 +41,8 @@
 	</header>
     
     <div id="leftSideAccountPage">
-        <img class="profilePic" src="../resources/images/posterProfile.png"></img>
-        <h2 id="userNameHeading">poster</h2>
+        <img class="profilePic" src="../resources/images/postRequestProfile.png"></img>
+        <h2 id="userNameHeading">post_request</h2>
 
         <form id="userSearchInput">
             <input type="text" placeholder="View a User's Account">
