--- a/Reports/reports.html
+++ b/Reports/reports.html
@@ -32,7 +32,7 @@
 					</ul>
 				</nav>
 				<div id="headerTitleContainer">
-					<h1 id="headerTitle">Account Info</h1>
+					<h1 id="headerTitle">Reports</h1>
 				</div>
 				<div id="loginButtonBG"></div>
 			</div>
