added request invite button

--- a/forum/forum.html
+++ b/forum/forum.html
@@ -112,7 +112,7 @@
 			</div>
 			<div class="gameDetails">
 				<button class ="reportButton" type="button" name="Report">Report</button>
-
+				<button class ="requestInvite" type="button" name="Request">Request Invite</button>
 			</div>
 		</section>
 
