--- a/Accounts/post_request_viewing_own.html
+++ b/Accounts/post_request_viewing_own.html
@@ -12,6 +12,8 @@
 
 	<link rel="stylesheet" href="../styles/main.css">
 	<link rel="stylesheet" href="user_account_style.css">  
+    <link rel="stylesheet" href="../styles/user.css">
+
   </head>
   
 <body>
@@ -20,20 +22,32 @@
 		<div id="headerContainer">
 			<div id="headerContainerPadding">
 				<nav id="topNav">
-					<a id ="topNav_title" href="#"><img id="topNav_titleImg" src="../resources/images/logo2.png" alt="logo"></a>
+					<a title="logo" id ="topNav_title" href="#"><img id="topNav_titleImg" src="../resources/images/logo2.png" alt="logo"></a>
 					<div id="topNav_hamburger" class="hamburger">
 						<div class="bar"></div>
 						<div class="bar"></div>
 						<div class="bar"></div>
 					</div>
 					<ul id="topNav_links">
-						<li><a class="linkAnimate" href="#">Home</a></li>
-						<li><a class="linkAnimate" href="#">Browse</a></li>
-						<li id="loginButtonContainer"><a id="loginButton" class="linkAnimate" href="../login/homepage.html">Login</a></li>
+						<li><a title="Back to home" class="linkAnimate" href="#">Home</a></li>
+						<li><a title="Browse posts" class="linkAnimate" href="../forum.html">Browse</a></li>
+						<li id="loginButtonContainer">
+							<div id="navUser">
+								<img id="navUserImg" class="userProfilePic" src="../resources/images/postRequestProfile.png" alt="postRequestPic">
+								<ul id="navUserOptionsList">
+									<li id="navUserName">post_request</li>
+									<li><a class="linkAnimate" href="#">Profile</a></li>
+									<li><a class="linkAnimate makepost" href="#">Make Post</a></li>
+									<li><a class="linkAnimate" href="#">Inbox</a></li>
+									<li><a class="linkAnimate" href="#">Reports</a></li>
+									<li><a class="linkAnimate logout" href="#">Log Out</a></li>
+								</ul>
+							</div>
+						</li>
 					</ul>
 				</nav>
 				<div id="headerTitleContainer">
-					<h1 id="headerTitle">Account Info</h1>
+					<h1 id="headerTitle">FIND A GAME</h1>
 				</div>
 				<div id="loginButtonBG"></div>
 			</div>
@@ -148,6 +162,9 @@
     </div>
     <script type="text/javascript" src="user_account_scripts.js"></script>
     <script src="../scripts/main.js"></script>
+    <script src="../scripts/user.js"></script>
+
 
 
 </body>
+</html>
