made admin and user page, different logins and functions

--- a/forum/loggedInForumAdmin.html
+++ b/forum/loggedInForumAdmin.html
@@ -12,8 +12,7 @@
 
 	<link rel="stylesheet" href="../styles/main.css">
 	<link rel="stylesheet" href="forum.css">
-	<link rel="stylesheet" href="post/styles/user.css">
-	<link rel="stylesheet" href="post/styles/main.css">
+	<link rel="stylesheet" href="../styles/user.css">
 </head>
 <body>
 	<header>
@@ -142,7 +141,7 @@
 	</div>
 	<script type="text/javascript" src="forum.js"></script>
 	<script src="../scripts/main.js"></script>
-	<script type="text/javascript" src="post/scripts/user.js"></script>
+	<script type="text/javascript" src="../scripts/user.js"></script>
 
 
 
