finished account pages

--- a/Accounts/admin_viewing_own.html
+++ b/Accounts/admin_viewing_own.html
@@ -36,7 +36,7 @@
 								<img id="navUserImg" class="userProfilePic" src="../resources/images/adminProfile.png" alt="adminPic">
 								<ul id="navUserOptionsList">
 									<li id="navUserName">Admin</li>
-									<li><a class="linkAnimate" href="#">Profile</a></li>
+									<li><a class="linkAnimate" href="admin_viewing_own.html">Profile</a></li>
 									<li><a class="linkAnimate makepost" href="#">Make Post</a></li>
 									<li><a class="linkAnimate" href="#">Inbox</a></li>
 									<li><a class="linkAnimate" href="#">Reports</a></li>
