--- a/Accounts/post_request_viewing_admin.html
+++ b/Accounts/post_request_viewing_admin.html
@@ -36,7 +36,7 @@
 								<img id="navUserImg" class="userProfilePic" src="../resources/images/postRequestProfile.png" alt="postRequestPic">
 								<ul id="navUserOptionsList">
 									<li id="navUserName">post_request</li>
-									<li><a class="linkAnimate" href="#">Profile</a></li>
+									<li><a class="linkAnimate" href="post_request_viewing_own.html">Profile</a></li>
 									<li><a class="linkAnimate makepost" href="#">Make Post</a></li>
 									<li><a class="linkAnimate" href="#">Inbox</a></li>
 									<li><a class="linkAnimate" href="#">Reports</a></li>
