--- a/Accounts/poster_viewing_admin.html
+++ b/Accounts/poster_viewing_admin.html
@@ -36,7 +36,7 @@
 								<img id="navUserImg" class="userProfilePic" src="../resources/images/posterProfile.png" alt="posterPic">
 								<ul id="navUserOptionsList">
 									<li id="navUserName">poster</li>
-									<li><a class="linkAnimate" href="#">Profile</a></li>
+									<li><a class="linkAnimate" href="poster_viewing_own.html">Profile</a></li>
 									<li><a class="linkAnimate makepost" href="#">Make Post</a></li>
 									<li><a class="linkAnimate" href="#">Inbox</a></li>
 									<li><a class="linkAnimate" href="#">Reports</a></li>
