added links to forum pages and corrected headers

--- a/forum/loggedInForumAdmin.html
+++ b/forum/loggedInForumAdmin.html
@@ -32,9 +32,9 @@
 						<li id="loginButtonContainer">
 
 							<div id="navUser">
-								<img id="navUserImg" class="userProfilePic" src="../../resources/images/postRequestProfile.png" alt="adminPic">
+								<img id="navUserImg" class="userProfilePic" src="../resources/images/adminProfile.png" alt="adminPic">
 								<ul id="navUserOptionsList">
-									<li id="navUserName">User</li>
+									<li id="navUserName">admin</li>
 									<li><a class="linkAnimate" href="#">Profile</a></li>
 									<li><a class="linkAnimate makepost" href="#">Make Post</a></li>
 									<li><a class="linkAnimate" href="#">Inbox</a></li>
@@ -126,8 +126,10 @@
 				<span class= "postTitle">Looking for players</span>
 			</div>
 			<div class="gameDetails">
+                <button class ="requestInvite" type="button" name="Request">Invited</button>
+                <a href="#" id="viewPost">View Post</a>
 				<button class ="reportButton" type="button" name="Report">Report</button>
-				<button class ="requestInvite" type="button" name="Request">Request Invite</button>
+
 
 			</div>
 		</section>
