--- a/forum/loggedInForumUser.html
+++ b/forum/loggedInForumUser.html
@@ -32,9 +32,9 @@
 						<li id="loginButtonContainer">
 
 							<div id="navUser">
-								<img id="navUserImg" class="userProfilePic" src="../../resources/images/adminProfile.png" alt="adminPic">
+								<img id="navUserImg" class="userProfilePic" src="../resources/images/postRequestProfile.png" alt="postRequestPic">
 								<ul id="navUserOptionsList">
-									<li id="navUserName">Admin</li>
+									<li id="navUserName">post_request</li>
 									<li><a class="linkAnimate" href="#">Profile</a></li>
 									<li><a class="linkAnimate makepost" href="#">Make Post</a></li>
 									<li><a class="linkAnimate" href="#">Inbox</a></li>
