added most links

--- a/Accounts/post_request_viewing_admin.html
+++ b/Accounts/post_request_viewing_admin.html
@@ -29,8 +29,9 @@
 						<div class="bar"></div>
 					</div>
 					<ul id="topNav_links">
-						<li><a title="Back to home" class="linkAnimate" href="#">Home</a></li>
-						<li><a title="Browse posts" class="linkAnimate" href="../forum.html">Browse</a></li>
+						<li><a title="Back to home" class="linkAnimate" href="../forum/loggedInForumUser.html">Home</a></li>
+                        <li><a class="linkAnimate" href="#">Back to Top</a></li>
+                        <li><a class="linkAnimate" href="#">Back to Top</a></li>
 						<li id="loginButtonContainer">
 							<div id="navUser">
 								<img id="navUserImg" class="userProfilePic" src="../resources/images/postRequestProfile.png" alt="postRequestPic">
@@ -38,14 +39,14 @@
 									<li id="navUserName">post_request</li>
 									<li><a class="linkAnimate" href="post_request_viewing_own.html">Profile</a></li>
 									<li><a class="linkAnimate makepost" href="#">Make Post</a></li>
-									<li><a class="linkAnimate logout" href="#">Log Out</a></li>
+									<li><a class="linkAnimate logout" href="../login/index.html">Log Out</a></li>
 								</ul>
 							</div>
 						</li>
 					</ul>
 				</nav>
 				<div id="headerTitleContainer">
-					<h1 id="headerTitle">FIND A GAME</h1>
+					<h1 id="headerTitle">ACCOUNT INFO</h1>
 				</div>
 				<div id="loginButtonBG"></div>
 			</div>
