--- a/Reports/reports.html
+++ b/Reports/reports.html
@@ -12,6 +12,8 @@
 
 	<link rel="stylesheet" href="../styles/main.css">
 	<link rel="stylesheet" href="reports.css">  
+    <link rel="stylesheet" href="../styles/user.css">
+
   </head>
   <body>
     <header>
@@ -19,20 +21,31 @@
 		<div id="headerContainer">
 			<div id="headerContainerPadding">
 				<nav id="topNav">
-					<a id ="topNav_title" href="#"><img id="topNav_titleImg" src="../resources/images/logo2.png" alt="logo"></a>
+					<a title="logo" id ="topNav_title" href="#"><img id="topNav_titleImg" src="../resources/images/logo2.png" alt="logo"></a>
 					<div id="topNav_hamburger" class="hamburger">
 						<div class="bar"></div>
 						<div class="bar"></div>
 						<div class="bar"></div>
 					</div>
 					<ul id="topNav_links">
-						<li><a class="linkAnimate" href="#">Home</a></li>
-						<li><a class="linkAnimate" href="#">Browse</a></li>
-						<li id="loginButtonContainer"><a id="loginButton" class="linkAnimate" href="../login/homepage.html">Login</a></li>
+						<li><a title="Back to home" class="linkAnimate" href="../forum/loggedInForumAdmin.html">Home</a></li>
+                        <li><a class="linkAnimate" href="#">Back to Top</a></li>
+						<li id="loginButtonContainer">
+							<div id="navUser">
+								<img id="navUserImg" class="userProfilePic" src="../resources/images/adminProfile.png" alt="adminPic">
+								<ul id="navUserOptionsList">
+									<li id="navUserName">Admin</li>
+									<li><a class="linkAnimate" href="../Accounts/admin_viewing_own.html">Profile</a></li>
+									<li><a class="linkAnimate makepost" href="#">Make Post</a></li>
+									<li><a class="linkAnimate" href="../Reports/reports.html">Reports</a></li>									
+                                    <li><a class="linkAnimate logout" href="../login/index.html">Log Out</a></li>
+								</ul>
+							</div>
+						</li>
 					</ul>
 				</nav>
 				<div id="headerTitleContainer">
-					<h1 id="headerTitle">Reports</h1>
+					<h1 id="headerTitle">OPEN REPORTS</h1>
 				</div>
 				<div id="loginButtonBG"></div>
 			</div>
@@ -149,6 +162,7 @@
     </div>
     <script src="../scripts/main.js"></script>
     <script src="reportScript.js"></script>
+    <script src="../scripts/user.js"></script>
 
     
     
