--- a/forum/loggedInForumUser.html
+++ b/forum/loggedInForumUser.html
@@ -27,17 +27,17 @@
 						<div class="bar"></div>
 					</div>
 					<ul id="topNav_links">
-						<li><a class="linkAnimate" href="#">Home</a></li>
-						<li><a class="linkAnimate" href="#">Browse</a></li>
+						<li><a class="linkAnimate" href="../forum/loggedInForumUser.html">Home</a></li>
+                        <li><a class="linkAnimate" href="#">Back to Top</a></li>
 						<li id="loginButtonContainer">
 
 							<div id="navUser">
 								<img id="navUserImg" class="userProfilePic" src="../resources/images/postRequestProfile.png" alt="postRequestPic">
 								<ul id="navUserOptionsList">
 									<li id="navUserName">post_request</li>
-									<li><a class="linkAnimate" href="#">Profile</a></li>
+									<li><a class="linkAnimate" href="../Accounts/post_request_viewing_own.html">Profile</a></li>
 									<li><a class="linkAnimate makepost" href="#">Make Post</a></li>
-									<li><a class="linkAnimate logout" href="forum.html">Log Out</a></li>
+									<li><a class="linkAnimate logout" href="../login/index.html">Log Out</a></li>
 								</ul>
 							</div>
 
@@ -58,8 +58,8 @@
 				<li class ='sideNavList'>
 
 					<form id="userSearchInput">
-							<input type="text" placeholder="Search a Game">
-							<input type="submit" value="Find Game">
+							<input type="text" placeholder="Search for a Post">
+							<input type="submit" value="Find Post">
 					</form>
 				</li>
 				<li class ='sideNavList'>
@@ -131,10 +131,10 @@
 		</section>
 
 	</nav>
-	<div class="dialogContainer" id="userNotFound">
+	<div class="dialogContainer" id="postNotFound">
 			<div class="dialogBox">
 					<span class="closeBox">x</span>
-					<br>User not found
+					<br>Post not found
 			</div>
 	</div>
 	<script type="text/javascript" src="forum.js"></script>
