--- a/login/index.html
+++ b/login/index.html
@@ -3,7 +3,7 @@
   <head>
    <meta charset="utf-8">
      <title>Meet'N'Play</title>
-     <link rel="stylesheet" type="text/css" href="homepage.css">
+     <link rel="stylesheet" type="text/css" href="login.css">
      <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700" rel="stylesheet">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   </head>
@@ -24,7 +24,7 @@
           </div>
 
 
-  <script type="text/javascript" src="homepage.js"></script>
+  <script type="text/javascript" src="login.js"></script>
   </body>
 
   <footer>
