--- a/Accounts/admin_viewing_own.html
+++ b/Accounts/admin_viewing_own.html
@@ -37,8 +37,9 @@
 								<ul id="navUserOptionsList">
 									<li id="navUserName">Admin</li>
 									<li><a class="linkAnimate" href="admin_viewing_own.html">Profile</a></li>
-									<li><a class="linkAnimate makepost" href="#">Make Post</a></li>
-									<li><a class="linkAnimate" href="../Reports/reports.html">Reports</a></li>									<li><a class="linkAnimate logout" href="../login/index.html">Log Out</a></li>
+									<li><a class="linkAnimate makepost" href="../forum/post/admin-make.html">Make Post</a></li>
+									<li><a class="linkAnimate" href="../Reports/reports.html">Reports</a></li>									
+                                    <li><a class="linkAnimate logout" href="../login/index.html">Log Out</a></li>
 								</ul>
 							</div>
 						</li>
