--- a/forum/loggedInForumAdmin.html
+++ b/forum/loggedInForumAdmin.html
@@ -36,7 +36,7 @@
 								<ul id="navUserOptionsList">
 									<li id="navUserName">admin</li>
 									<li><a class="linkAnimate" href="../Accounts/admin_viewing_own.html">Profile</a></li>
-									<li><a class="linkAnimate makepost" href="#">Make Post</a></li>
+									<li><a class="linkAnimate makepost" href="../forum/post/admin-make.html">Make Post</a></li>
 									<li><a class="linkAnimate" href="../Reports/reports.html">Reports</a></li>
 									<li><a class="linkAnimate logout" href="../login/index.html">Log Out</a></li>
 								</ul>
@@ -126,7 +126,7 @@
 			</div>
 			<div class="gameDetails">
                 <button class ="requestInvite" type="button" name="Request">Joined</button>
-                <a href="#" id="viewPost">View Post</a>
+                <a href="../forum/post/admin.html" id="viewPost">View Post</a>
 				<button class ="reportButton" type="button" name="Report">Report</button>
 
 
