--- a/Accounts/post_request_viewing_admin.html
+++ b/Accounts/post_request_viewing_admin.html
@@ -38,7 +38,7 @@
 								<ul id="navUserOptionsList">
 									<li id="navUserName">post_request</li>
 									<li><a class="linkAnimate" href="post_request_viewing_own.html">Profile</a></li>
-									<li><a class="linkAnimate makepost" href="#">Make Post</a></li>
+									<li><a class="linkAnimate makepost" href="../forum/post/post-request-make.html">Make Post</a></li>
 									<li><a class="linkAnimate logout" href="../login/index.html">Log Out</a></li>
 								</ul>
 							</div>
