--- a/Accounts/poster_viewing_post_request.html
+++ b/Accounts/poster_viewing_post_request.html
@@ -37,7 +37,7 @@
 								<ul id="navUserOptionsList">
 									<li id="navUserName">poster</li>
 									<li><a class="linkAnimate" href="poster_viewing_own.html">Profile</a></li>
-									<li><a class="linkAnimate makepost" href="#">Make Post</a></li>
+									<li><a class="linkAnimate makepost" href="../forum/post/poster-make.html">Make Post</a></li>
 									<li><a class="linkAnimate logout" href="../login/index.html">Log Out</a></li>
 								</ul>
 							</div>
