--- a/Reports/reports.html
+++ b/Reports/reports.html
@@ -36,7 +36,7 @@
 								<ul id="navUserOptionsList">
 									<li id="navUserName">Admin</li>
 									<li><a class="linkAnimate" href="../Accounts/admin_viewing_own.html">Profile</a></li>
-									<li><a class="linkAnimate makepost" href="#">Make Post</a></li>
+									<li><a class="linkAnimate makepost" href="../forum/post/admin-make.html">Make Post</a></li>
 									<li><a class="linkAnimate" href="../Reports/reports.html">Reports</a></li>									
                                     <li><a class="linkAnimate logout" href="../login/index.html">Log Out</a></li>
 								</ul>
