--- a/forum/loggedInForumPoster.html
+++ b/forum/loggedInForumPoster.html
@@ -36,7 +36,7 @@
 								<ul id="navUserOptionsList">
 									<li id="navUserName">poster</li>
 									<li><a class="linkAnimate" href="../Accounts/poster_viewing_own.html">Profile</a></li>
-									<li><a class="linkAnimate makepost" href="#">Make Post</a></li>
+									<li><a class="linkAnimate makepost" href="../forum/post/poster-make.html">Make Post</a></li>
 									<li><a class="linkAnimate logout" href="../login/index.html">Log Out</a></li>
 								</ul>
 							</div>
@@ -125,7 +125,7 @@
 			</div>
 			<div class="gameDetails">
                 <button class ="requestInvite" type="button" name="Request">Joined</button>
-                <a href="#" id="viewPost">View Post</a>
+                <a href="../forum/post/post-user.html" id="viewPost">View Post</a>
 				<button class ="reportButton" type="button" name="Report">Report</button>
 
 
