--- a/final/public/login.html
+++ b/final/public/login.html
@@ -12,7 +12,7 @@
     <img src = "../resources/images/logo.png" id = 'mainlogo' >
 
     <div id="loginField">
-      <form id = 'loginForm' action="/users/login" method="post">
+      <form id = 'loginForm' action="/login/start" method="post">
         <input type="text" name="name" placeholder="Username Here">
 
         <input type="password" name="password" placeholder="Password Here">
