--- a/final/public/createNewUser.html
+++ b/final/public/createNewUser.html
@@ -13,11 +13,11 @@
 
   <div id="newUserField">
     <form id = 'loginForm' action="/login/start" method="post">
-      <input id="user" name="name" placeholder="Username Here">
-      <input id="password" name="password" placeholder="Password Here">
-      <input id="city" name="city" placeholder="Where are you from?">
-      <input id="description" name="description" placeholder="Tell us about yourself">
-      <input id="submit" value="create user">
+      <input id="user" type = "text" name="name" autocomplete = "off" placeholder="Username Here">
+      <input id="password" type = "password" name="password" autocomplete = "off" placeholder="Password Here">
+      <input id="city" type = "text" name="city" autocomplete = "off" placeholder="Where are you from?">
+      <input id="description" type = "text" name="description" autocomplete = "off" placeholder="Tell us about yourself">
+      <input type="submit" value="Sign Up">
 
 
     </form>
