--- a/final/public/login.html
+++ b/final/public/login.html
@@ -13,23 +13,25 @@
 
     <div id="loginField">
       <form id = 'loginForm' action="/login/start" method="post">
-        <input type="text" name="name" placeholder="Username Here">
+        <input type="text" name="name" autocomplete = "off" placeholder="Username Here">
 
         <input type="password" name="password" placeholder="Password Here">
 
-        <input type="submit" value="login">
+        <input type="submit" value="Login">
 
 
       </form>
-          </div>
+      <span>
+        <a href="/signup">Not a User? Become one now!! Sign Up Here</a>
+      </span>
+
+    </div>
 
 
   </body>
 
   <footer>
       Copyright (c) 2018 Copyright Holder All Rights Reserved.
-
-
   </footer>
 
 
