made Sign up link more visible

--- a/final/public/login.html
+++ b/final/public/login.html
@@ -22,7 +22,7 @@
 
       </form>
       <span>
-        <a href="/signup">Not a User? Become one now!! Sign Up Here</a>
+        <a class = "newUser" href="/signup">Not a User? Become one now!! Sign Up Here</a>
       </span>
 
     </div>
